ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2014-12-11 German Llort <german.llort@bsc.es>
	* Modified script tdbscan-sweep to run the same experiment several times

	* Added new statistics to the final report of tdbscan-sweep, and make averages of all backends 

	* Fixed bug in tdscan-launcher when parsing the hostfile from the LSF system manager

2014-12-10 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug in 'ClusteredStatesPRVGenerator' that caused a duplicity
	of the clusters opening event

	* Fixed a regression in 'TraceData' when using 'CompleteBursts' and
	'ClusteringBursts', that broke the correct behaviour of the 'BurstClustering'
	application

2014-12-10 German Llort <german.llort@bsc.es>
	* Added suffix .sh to the wrapper scripts BurstClustering and ClustersSequenceScore 
	to avoid compilation problems.

	* TDBSCAN now prints timing statistics 

	* Added a sweep script to run multiple TDBSCAN experiments

2014-12-04 German Llort <german.llort@bsc.es>
	* Changed obsolete macro AM_PROG_CC_STDC to AC_PROG_CC in
	configure.ac.template

	* Initial steps to improve the adaption of MinPoint values at different
	tree levels

	* Solved a bug in hull intersection density calculation

	* Added 'tdbscan-launcher' script ease the offline TreeDBSCAN execution

	* Updated time measurements accross TreeDBSCAN implementation

	* Moved 'AnalyzeData' method from WorkerOffline & Online to the
	generic Worker class

	* Solved a bug in CSVDataExtractor that do not avoid comment lines
	starting with '#'

2014-11-26 Juan Gonzalez <juan.gonzalez@bsc.es> 
	* Solved a bug in the data normalization that caused incorrect results
	when using the TreeDBSCAN in offline mode. Now, if you invoke 